--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Adam Wilder Aerial Photography"
+      content="A portfolio for aerial photography"
     />
     <link
       rel="stylesheet"
@@ -34,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Adam Wilder Aerial Photography</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
